--- a/_layouts/booksummaries.html
+++ b/_layouts/booksummaries.html
@@ -1,22 +1,20 @@
-<!DOCTYPE html>
-<html lang="{{ page.lang | default: site.lang | default: "en" }}">
+---
+layout: default
+---
+<div class="booksummaries">
+  {%- if page.title -%}
+    <h1 class="page-heading">{{ page.title }}</h1>
+  {%- endif -%}
 
-  {%- include head.html -%}
+ {{ content }}
+  {%- if site.posts.size > 0 -%}
+    <ul class="post-list">
+      {%- for post in site.posts -%}
+       {% if post.tags contains "booksummaries" %}
+        <li> {%- assign date_format = site.minima.date_format | default: "%b '%Y" -%} <span class="post-meta">{{ post.date | date: date_format }}</span> <a class="post-link" href="{{ post.url | relative_url }}"> {{ post.title | escape }} </a></li>
+       {% endif %}
+     {%- endfor -%}
+    </ul>
+  {%- endif -%}
 
-  <body>
-
-    {%- include header.html -%}
-
-    <main class="page-content" aria-label="Content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </main>
-
-    {%- include footer.html -%}
-
-  </body>
-
-  <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-
-</html>
+</div>
