--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -11,7 +11,7 @@ $base-line-height: 1.5 !default;
 $spacing-unit:     40px !default;
 
 $text-color:       #292929 !default;
-$a-color:          #428442 !default;
+$a-color:          #03c03c !default;
 $background-color: #ffffff !default;
 $brand-color:      #2a7ae2 !default;
 
